# cg_project

./: .gitignore  CMakeLists.txt  Cargo.toml  Challenges Tracker.txt  README.md  ShaderProgram.cpp  TODO.txt  Util.cpp  Util.hpp  main.cpp  usefulvideos.txt
Assets/Shell/: shell.mtl
assets/OG_Tanks/: tnk_tank_e.dae
assets/Shell/: shell.mtl
assets/tank/: tank_1.stl
camera/: camera.hpp
hpp_cpp/: camera.cpp
presentation/: Challenges Tracker.txt  Screen Recording 2024-02-10 at 22.51.06.mov  usefulvideos.txt
shader/: shader.frag  shader.vert
shader/color/: color.frag  color.vert
shader/default/: default.frag  default.vert
shader/texture/: texture.frag  texture.vert
src/: Shader.hpp  ShaderProgram.hpp  camera.rs  game.rs  gameloop.rs  input_state.rs  lib.rs  main.cpp  main.rs  object.rs  object_loader.rs  object_template.rs  render.rs  shader.rs  shader_program.rs  soundmanager.rs  texture.rs  texture_atlas.rs  vertex_feature.rs
src/Camera/: Camera.cpp
src/Logic/: Game.cpp  Game.hpp
src/ObjLoader/: ObjLoader.cpp  ObjLoader.hpp
src/Object/: Object.cpp  Object.hpp
src/ObjectLoader/: ObjectLoader.cpp  ObjectLoader.hpp
src/ObjectTemplate/: ObjectTemplate.cpp  ObjectTemplate.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.hpp
src/Texture/: Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp
src/Util/: Util.cpp  Util.hpp
src/VertexFeature/: VertexFeature.hpp
src/camera/: Camera.cpp  Camera.hpp
src/game_objects/: cube.rs  gamemap.rs  (+3 more)
txt/: Challenges Tracker.txt  usefulvideos.txt
(+13 files in other folders)
